2005-08-22  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/audio/gstaudiosrc.h:
	* gst-libs/gst/audio/gstaudiosrc.c: Implement open_device and
	close_device in the ring buffer, like gstaudiosink.

	* ext/alsa/gstalsamixer.h:
	* ext/alsa/gstalsamixer.c: Not a GObject any more. Include a nifty
	macro to implement the interface without much code. Cleanups. 

	* ext/alsa/gstalsasrc.h:
	* ext/alsa/gstalsasrc.c: Be a mixer. Open device and mixer in
	READY.

	* ext/alsa/Makefile.am: Add new files.
	* ext/alsa/gstalsamixerelement.c: 
	* ext/alsa/gstalsamixerelement.c: Split element code out from
	mixer code so that alsasrc can be a mixer too.

2005-08-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* check/elements/volume.c: (setup_volume), (cleanup_volume),
	(GST_START_TEST):
	* check/elements/vorbisdec.c: (setup_vorbisdec),
	(cleanup_vorbisdec), (GST_START_TEST), (vorbisdec_suite):
	* ext/vorbis/vorbisdec.c: (vorbis_dec_src_query),
	(vorbis_handle_identification_packet),
	(vorbis_handle_comment_packet), (vorbis_handle_type_packet),
	(vorbis_handle_header_packet), (vorbis_dec_push),
	(vorbis_dec_chain):
	  use the setup/teardown methods to save code.  save code is good.

2005-08-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* check/Makefile.am:
	  add ext dir for plugins
	  add vorbisdec test conditionally
	* check/elements/volume.c: (setup_volume), (cleanup_volume),
	(GST_START_TEST), (volume_suite):
	  add a test with wrong caps
	* check/elements/vorbisdec.c: (chain_func), (setup_vorbisdec),
	(cleanup_vorbisdec), (GST_START_TEST), (vorbisdec_suite), (main):
	  add a vorbisdec test
	* ext/ogg/gstoggdemux.c: (gst_ogg_chain_new_stream),
	(gst_ogg_demux_chain), (gst_ogg_demux_loop):
	  clean up debug output
	* ext/vorbis/vorbisdec.c: (vorbis_dec_chain):
	  yay, fix a segfault/security issue in vorbisdec
	  gst-launch fakesrc ! vorbisdec wasn't happy
	* ext/vorbis/vorbisenc.c: (vorbisenc_get_type),