@@ -44,6 +44,7 @@ enum
 {
   PROP_0,
   PROP_DEVICE,
+  PROP_DEVICE_NAME,
 };
 
 GST_BOILERPLATE_WITH_INTERFACE (GstAlsaSrc, gst_alsasrc, GstAudioSrc,
@@ -140,6 +141,10 @@ gst_alsasrc_class_init (GstAlsaSrcClass * klass)
       g_param_spec_string ("device", "Device",
           "ALSA device, as defined in an asound configuration file",
           "default", G_PARAM_READWRITE));
+
+  g_object_class_install_property (gobject_class, PROP_DEVICE_NAME,
+      g_param_spec_string ("device-name", "Device name",
+          "Human-readable name of the sound device", "", G_PARAM_READABLE));
 }
 
 static void
@@ -173,6 +178,18 @@ gst_alsasrc_get_property (GObject * object, guint prop_id,
   switch (prop_id) {
     case PROP_DEVICE:
       g_value_set_string (value, src->device);
+      break;
+    case PROP_DEVICE_NAME:
+      if (src->handle) {
+        snd_pcm_info_t *info;
+
+        snd_pcm_info_malloc (&info);
+        snd_pcm_info (src->handle, info);
+        g_value_set_string (value, snd_pcm_info_get_name (info));
+        snd_pcm_info_free (info);
+      } else {
+        g_value_set_string (value, NULL);
+      }
       break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
