@@ -1,5 +1,9 @@
 2005-08-22  Andy Wingo  <wingo@pobox.com>
 
+	* ext/alsa/gstalsasink.c (gst_alsasink_get_property): 
+	* ext/alsa/gstalsasrc.c (gst_alsasrc_get_property): Add a
+	device-name property.
+
 	* gst-libs/gst/audio/gstaudiosrc.h:
 	* gst-libs/gst/audio/gstaudiosrc.c: Implement open_device and
 	close_device in the ring buffer, like gstaudiosink.
